--- a/src/pages/Home/home.module.css
+++ b/src/pages/Home/home.module.css
@@ -39,6 +39,13 @@
   line-height: normal;
   text-decoration-line: line-through;
 }
+.products__list--name {
+  color: var(--gray-900);
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 
 .products__list--name {
   color: var(--gray-900);
