--- a/src/pages/Product/productPage.module.css
+++ b/src/pages/Product/productPage.module.css
@@ -10,14 +10,14 @@
 .product {
   display: flex;
   padding-top: 40px;
-  gap: 32px;
+  gap: 32px
 }
 
 .product__container--image {
   width: 60%;
 }
 
-.product__data {
+.product__data { 
   width: 40%;
 }
 
@@ -34,7 +34,7 @@
 
 .product__title {
   color: var(--brown-700);
-  font-size: 4rem;
+  font-size: 4.0rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -42,7 +42,7 @@
 
 .product__price {
   color: var(--gray-950);
-  font-size: 4rem;
+  font-size: 4.0rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
@@ -65,7 +65,7 @@
   padding-top: 32px;
 }
 
-.product__observation label {
+.product__observation label{
   color: var(--gray-900);
   font-size: 1.2rem;
   font-style: normal;
@@ -85,11 +85,11 @@
   width: 395px;
   height: 68px;
   padding: 8px 16px;
-  resize: none;
+  resize: none
 }
 
 .product__observation textarea::placeholder {
-  color: var(--gray-800);
+  color: var(--gray-800);  
 }
 
 .product__quantity--minus,
@@ -100,7 +100,7 @@
   cursor: pointer;
 }
 
-.product__quantity--input {
+.product__quantity--input  {
   color: var(--gray-950);
   font-size: 2.4rem;
   font-style: normal;
@@ -136,10 +136,11 @@
 .product__buy {
   padding-top: 32px;
   display: flex;
-  gap: 32px;
+  gap: 32px
 }
 
-@media (max-width: 768px) {
+
+@media (max-width: 768px) {   
   .product {
     padding-top: 10px;
   }
@@ -148,13 +149,13 @@
     padding-top: 22px;
     width: 100%;
   }
-
+  
   .product__container--image {
     width: 100%;
   }
 
   .product__tag {
-    padding: 8px 0;
+    padding: 8px 0
   }
 
   .product,
@@ -163,7 +164,7 @@
   }
 
   .product__image {
-    width: 100%;
+    width: 100%;    
     height: auto;
   }
 
